<resources>
    <string name="app_name">roosterr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="good_morning">Good Morning!</string>
    <string name="send_to">Share with a Friend</string>
    <string name="group_name">Group Name</string>
    <string name="share_title">Share with a Friend</string>
    <string name="title_activity_edit">Edit Reminder Group</string>
    <string name="title_activity_file">Browse Image</string>
    <string name="save">Save</string>
    <string name="day">Scheduled Reminders</string>
    <string name="title_activity_group_image">Choose Image</string>
    <string name="type_contact_name_or_phone_number">Type contact name or phone number</string>
    <string name="tip_this_group_has_no_members">TIP: This group has no members</string>
    <string name="tip_tap_to_delete">Tip: Tap contact name to delete</string>
    <string name="allow_contacts">Allow access to contacts to add new members</string>
    <string name="title_activity_about">About Us</string>
    <string name="about_quote">\"Behind Every Successful Man \n There Is A Great Reminder App\"</string>
    <string name="about_message">For people suffering from memory \nloss, I remind them via</string>
    <string name="about_header_1">Simple, Clean and Practical App</string>
    <string name="about_header_2">For</string>
    <string name="about_header_3">ToDo Lists &amp; Reminders</string>
    <string name="about_version_code">Version 2.0</string>
    <string name="about_help_faqs"><![CDATA[Help & FAQs]]></string>
    <string-array name="type">
        <item>@string/days_label</item>
        <item>@string/weeks_label</item>
        <item>@string/months_label</item>
        <item>@string/years_label</item>
    </string-array>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_upgrade">Premium Features</string>
    <string name="title_activity_feedback">Send Feedback</string>
    <string name="dialog_rate">If you find this app useful, please rate us on playstore</string>
    <string name="title_activity_reminder_set">Reminder Saved</string>
    <string name="title_activity_falcon">FalconActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activity_title_create">Create Reminder</string>
    <string name="upgrade_prompt">See all your upcoming reminders in a timeline view. It is a very useful feature. \n \nTo unlock Falcon View upgrade to PRO version.</string>
    <string name="dialog_alarm_title">Select Alarm Tune</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="title_activity_check_list">Add Checklist to SMS</string>
    <string name="dialog_new_list_hint">Type New Checklist Name</string>
    <string name="type_sms_message_text">Type sms message text</string>
    <string name="title_activity_backup">Backup / Restore</string>
    <string name="title_activity_sent_reminders">Sent Reminders</string>
    <string name="delete_all">Delete All</string>
    <string name="no_reminders_sent_yet">No reminders sent.</string>
    <string name="delete_all_sent_reminders">Delete all sent reminders?</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="delete_group">Delete group and its reminders?</string>
    <string name="delete">Delete</string>
    <string name="group_delete_success">Group was successfully deleted.</string>
    <string name="title_activity_login">Log in</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="backup_upgrade_text">Backup and Restore your Reminders. \n \nTo unlock Backup &amp; Restore upgrade to PRO version.</string>
    <string name="design_label">Designed IN</string>
    <string name="in_label">IN</string>
    <string name="country_label">Florida U.S.</string>
    <string name="or_label">OR</string>
    <string name="upgrade_to_pro_label">Upgrade to PRO</string>
    <string name="backup_label">Backup</string>
    <string name="restore_label">Restore</string>
    <string name="restore_file_label">The restore file must be kept on Phone Memory</string>
    <string name="backup_file_label">Backup saved in Download folder. Filename : RemindKing.DB</string>
    <string name="email_backup_label">Email Backup File</string>
    <string name="falcon_view_label">Falcon View</string>
    <string name="send_feedback_label">Send Feedback</string>
    <string name="type_feedback_question_label">Type feedback or question</string>
    <string name="email_label">Enter your email address</string>
    <string name="select_free_label">Select Free $0.00</string>
    <string name="browse_label">Browse</string>
    <string name="backup_restore_label">Backup and Restore</string>
    <string name="share_label">Share</string>
    <string name="rate_this_label">Rate This App</string>
    <string name="about_help_label">About and Help</string>
</resources>