<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_falcon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.roosterr.BackupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/view_upgrade"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/activity_margin" >

        <ImageView
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_cloud_download" />

        <TextView
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_upgrade_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ColoredButton"
            android:text="@string/upgrade_to_pro_label"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"

        android:id="@+id/view_backup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_cloud_done"
            android:layout_marginBottom="@dimen/activity_margin"/>

        <Button
            android:id="@+id/button_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ColoredButton"
            android:minWidth="@dimen/upgrade_buttons_min_width"
            android:text="@string/backup_label"/>

        <Button
            android:id="@+id/button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:minWidth="@dimen/upgrade_buttons_min_width"
            android:text="@string/restore_label"/>
        <TextView
            android:textColor="@color/colorSecondAccent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_file_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/activity_margin"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/view_done"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorSecondAccent"
            app:srcCompat="@drawable/ic_check_circle" />

        <TextView
            android:textColor="@color/colorSecondAccent"
            android:layout_margin="@dimen/activity_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_file_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/activity_margin"
            android:id="@+id/backup_text"/>

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ColoredButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/email_backup_label"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
