<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roosterr.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_height="112dp"
            android:layout_width="112dp"
            android:layout_marginTop="@dimen/activity_margin_large"
            android:layout_marginBottom="@dimen/activity_margin_small"
            app:srcCompat="@drawable/ic_logo"
            android:scaleType="centerInside" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_wordmark"
            android:tint="@color/colorAccent"/>

        <TextView
            android:layout_marginTop="32dp"
            android:text="@string/about_header_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/about_header_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/about_header_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            />

        <com.digits.sdk.android.DigitsAuthButton
            android:id="@+id/auth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/activity_margin_large"
            android:layout_marginBottom="@dimen/activity_margin_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:text="@string/design_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_small_padding"/>
            <ImageView
                app:srcCompat="@drawable/ic_flip_flops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_small_padding"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/country_label"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    app:srcCompat="@drawable/ic_beach"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
